--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.2.4",
     "@types/mdx": "^2.0.13",
+    "leaflet": "^1.9.4",
     "next": "15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
