--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@heroicons/react": "^2.2.0",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
+    "@neondatabase/serverless": "^1.0.0",
     "@next/mdx": "^15.2.4",
     "@types/mdx": "^2.0.13",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.41.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -21,6 +24,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "drizzle-kit": "^0.30.6",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "tailwindcss": "^4"
