--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "emmet.includeLanguages": {
         "javascript": "javascriptreact"
     },
-    "prettier.tabWidth": 2
+    "prettier.tabWidth": 2,
+    "editor.tabSize": 2
 }
