--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@neondatabase/serverless": "^1.0.0",
     "@next/mdx": "^15.2.4",
     "@types/mdx": "^2.0.13",
-    "leaflet": "^1.9.4",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.41.0",
+    "leaflet": "^1.9.4",
     "next": "15.2.4",
+    "next-auth": "^5.0.0-beta.29",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0"
