--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
     "leaflet": "^1.9.4",
+    "lightningcss-linux-x64-gnu": "^1.30.1",
     "next": "15.2.4",
     "next-auth": "^5.0.0-beta.29",
     "quill": "^2.0.3",
