--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
     "leaflet": "^1.9.4",
-    "lightningcss-linux-x64-gnu": "^1.30.1",
     "next": "15.2.4",
     "next-auth": "^5.0.0-beta.29",
     "quill": "^2.0.3",
@@ -27,6 +26,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/oxide-linux-x64-gnu": "^4.1.11",
+    "lightningcss-linux-x64-gnu": "^1.30.1",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
